src/style.css
.sectionHeader{
    background-size: cover;
    background-position: center top;
    background-attachment: scroll; /* Is this the same as it was before or is this simpler? */
    max-width: 100%;
    height: 100vh;
    padding: 0px !important;
    margin: 0px !important;
}

.sectionHeaderTitle {
    text-align: center;
    color: WHITESMOKE;
    text-shadow: 0px 0px 20px black, 0px 0px 20px black, 0px 0px 20px black, 0px 0px 20px black, 0px 0px 20px black, 0px 0px 20px black;
}

.card-overlay {
    color: WHITESMOKE;
    background-color: rgba(24, 27, 32, .9);
}

.carousel-control-next, .carousel-control-prev, .carousel-arrows{
    opacity: 1.0;
}

.dropdown-menu a:hover {
    background-color: #ddd;
}

.dropdown:hover .dropdown-menu {
    display: block;
}

.climbing {
    href: "";
}

.display-3 {
    font-size: 5vw;
}

